# AutoAgents-Experimental-Backends

./: Cargo.toml  LICENSE  LICENSE_APACHE  README.md
autoagents-burn/: Cargo.toml  NOTICES.md  README.md
autoagents-burn/src/: backend.rs  lib.rs  utils.rs
autoagents-burn/src/model/llama/: chat.rs  llama3.rs  mod.rs  tiny.rs
autoagents-burn/src/model/llama/generation/: context.rs  generate.rs  sampling.rs  streaming.rs
autoagents-burn/src/model/llama/nn/: fftn.rs  mod.rs  pos_encoding.rs  transformer.rs
autoagents-burn/src/model/llama/nn/attention/: cache.rs  kv_cache.rs  mha.rs
autoagents-burn/src/model/llama/nn/llama/: base.rs  import.rs  pretrained.rs
autoagents-burn/src/model/llama/tokenizer/: base.rs  sentence_piece.rs  tiktoken.rs
autoagents-onnx/: Cargo.toml  README.md
autoagents-onnx/src/: chat.rs  device.rs  error.rs  lib.rs  model.rs
autoagents-onnx/src/runtime/: inference.rs  mod.rs
examples/burn/: .gitignore  Cargo.toml  README.md
examples/burn/src/: main.rs
examples/burn/src/commands/: frombytes.rs  fromfile.rs  mod.rs  pretrained.rs
examples/wasm_agent/: .gitignore  Cargo.toml  README.md  build-lib.sh  index.html  llamaWorker.js
examples/wasm_agent/src/: agent.rs  lib.rs  phi_agent.rs  phi_llm_provider.rs  phi_provider.rs
