[package]
name = "autoagents-burn-example"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "autoagents-burn-example"
path = "src/main.rs"
test = false

[features]
default = []
cuda = ["autoagents-burn/cuda", "f16"]
metal = ["autoagents-burn/metal", "f16"]
wgpu = ["autoagents-burn/wgpu", "f16"]
ndarray = ["autoagents-burn/ndarray", "f32"]

## Dtype
f16 = ["autoagents-burn/f16"]
f32 = ["autoagents-burn/f32"]

[dependencies]
autoagents-derive.workspace = true
autoagents = { workspace = true, features = [] }
autoagents-burn = { workspace = true, default-features = false, features = [
    "tiny",
    "llama3",
    "pretrained"
] }
clap = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio-stream.workspace = true
tokio = { workspace = true, features = [
    "rt",
    "rt-multi-thread",
    "macros",
] }
