[package]
name = "wasm_agent"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { workspace = true, features = ["serde", "serde_json"] }
autoagents-burn = { workspace = true, default-features = false, features = [
    "llama3",
    "webgpu",
    "f16",
    "import"
] }
autoagents-derive.workspace = true
autoagents.workspace = true
autoagents-core.workspace = true
autoagents-llm.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4", "js"] }
wasm-bindgen-futures = { workspace = true }
web-sys = { version = "0.3.77", features = [
    "Window",
    "Response",
    "Request",
    "RequestInit",
] }

# Wasm specific crates.
console_error_panic_hook = "0.1.7"
js-sys = "0.3.64"
candle = { version = "0.8", package = "candle-core" }
candle-nn = "0.8"
candle-transformers = "0.8"
tokenizers = { workspace = true, default-features = false, features = [
    "unstable_wasm",
] }
anyhow = "1.0"
image = "0.24"
log.workspace = true
futures = { workspace = true }
async-stream = "0.3"
serde-wasm-bindgen = "0.6.5"
console_log = "1.0"
